--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "mongodb": "^4.11.0",
-    "next": "13.0.3",
+    "next": "13.0.4",
+    "next-auth": "^4.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
